# rolling-ipc

./: CMakeLists.txt  LICENSE  README.md
testclient/: client.cpp
testserver/: server.cpp
